# pacto-governance-bots

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  SETUP.md  docker-compose.yml
.github/workflows/: ci.yml
bots/bosun/: .env.example  AGENTS.md  Dockerfile  README.md  manifest.json  pyproject.toml  systemd.service
bots/bosun/src/bosun/: __init__.py  __main__.py  addresses.py  bosun.py  config.py  contracts.py  formatter.py  reader.py  types.py  version.py
bots/bosun/tests/: conftest.py  test_bosun.py  test_config.py  test_contract.py  test_formatter.py  test_handlers.py  test_http.py  test_reader.py
docker/: README.md  relay-config.toml
docs/: 2026-07-05-001-feat-python-governance-snapshot-bot-plan.md  2026-07-05-python-governance-snapshot-bot-requirements.md  2026-07-08-001-feat-python-governance-snapshot-bot-phase2-requirements.md  2026-07-08-002-sdk-usability-recommendations.md  2026-07-09-001-feat-bosun-sdk-refactor-plan.md  2026-07-13-001-bosun-dev-env-integration.md
scripts/: generate-env.sh  health-check.sh  setup-dev-env.sh  status.sh
