[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bosun"
version = "0.1.0"
description = "Pacto governance snapshot bot for MLS Squad channels"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pacto-bot-sdk @ git+https://github.com/covenant-gov/pacto-bot-api.git#subdirectory=python",
    "pydantic-settings>=2.0",
    "web3>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bosun"]
editable-mode = "lenient"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
